Modifications sur le notebook modelisation

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -180,11 +180,11 @@
     "mlflow.set_tracking_uri(\"sqlite:///mlruns.db\")  # Stockage local MLflow\n",
     "\n",
     "with mlflow.start_run(run_name=\"LightGBM_baseline\"):\n",
-    "    # 1. Logguer quelques paramètres simples\n",
+    "    # 1. Logging de paramètres basiques\n",
     "    mlflow.log_param(\"n_estimators\", 100)\n",
     "    mlflow.log_param(\"random_state\", 42)\n",
     "\n",
-    "    # 2. Entraînement minimal de LightGBM (sans hyperparamètres particuliers)\n",
+    "    # 2. Entraînement de LightGBM (sans hyperparamètres particuliers)\n",
     "    model = LGBMClassifier(n_estimators=100, random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
@@ -219,7 +219,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ouvrir le dossier\n",
+    "# cd /D D:\\Pro\\OpenClassrooms\\Projet_7\\3_dossier_code_012025\n",
+    "# Remote\n",
+    "# git remote -v\n",
+    "# git push -u origin main\n",
+    "# davfgh\n",
+    "# Créer un jeton d'accès personnel (PAT) :\n",
+    "# Allez dans les paramètres de votre compte GitHub.\n",
+    "# Naviguez vers Paramètres du développeur.\n",
+    "# Cliquez sur Jetons d'accès personnels.\n",
+    "# Générez un nouveau jeton avec les autorisations nécessaires (comme repo pour un contrôle total des dépôts privés).\n",
+    "# Utiliser le PAT au lieu de votre mot de passe :\n",
+    "# Lorsque vous êtes invité à entrer un mot de passe lors des opérations Git, utilisez le PAT que vous venez de créer.\n",
+    "\n",
+    "# Branche origin & main\n",
+    "# Push\n",
+    "# Vérification"
+   ]
   }
  ],
  "metadata": {
