Ajout des tests unitaires et du workflow CI

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -112,35 +112,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/01/08 16:31:00 WARNING mlflow.utils.git_utils: Failed to import Git (the Git executable is probably not on your PATH), so Git SHA is not available. Error: Failed to initialize: Bad git executable.\n",
-      "The git executable must be specified in one of the following ways:\n",
-      "    - be included in your $PATH\n",
-      "    - be set via $GIT_PYTHON_GIT_EXECUTABLE\n",
-      "    - explicitly set via git.refresh(<full-path-to-git-executable>)\n",
-      "\n",
-      "All git commands will error until this is rectified.\n",
-      "\n",
-      "This initial message can be silenced or aggravated in the future by setting the\n",
-      "$GIT_PYTHON_REFRESH environment variable. Use one of the following values:\n",
-      "    - quiet|q|silence|s|silent|none|n|0: for no message or exception\n",
-      "    - warn|w|warning|log|l|1: for a warning message (logging level CRITICAL, displayed by default)\n",
-      "    - error|e|exception|raise|r|2: for a raised exception\n",
-      "\n",
-      "Example:\n",
-      "    export GIT_PYTHON_REFRESH=quiet\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 362, number of negative: 388\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000346 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000540 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 2502\n",
       "[LightGBM] [Info] Number of data points in the train set: 750, number of used features: 10\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.482667 -> initscore=-0.069361\n",
@@ -172,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/08 16:31:09 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/01/10 16:37:22 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     }
    ],
@@ -216,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,17 +204,15 @@
     "# git remote -v\n",
     "# git push -u origin main\n",
     "# davfgh\n",
-    "# Créer un jeton d'accès personnel (PAT) :\n",
-    "# Allez dans les paramètres de votre compte GitHub.\n",
-    "# Naviguez vers Paramètres du développeur.\n",
-    "# Cliquez sur Jetons d'accès personnels.\n",
-    "# Générez un nouveau jeton avec les autorisations nécessaires (comme repo pour un contrôle total des dépôts privés).\n",
-    "# Utiliser le PAT au lieu de votre mot de passe :\n",
-    "# Lorsque vous êtes invité à entrer un mot de passe lors des opérations Git, utilisez le PAT que vous venez de créer.\n",
+    "# token à la place du password git\n",
     "\n",
-    "# Branche origin & main\n",
-    "# Push\n",
-    "# Vérification"
+    "# Implémentation de pytest/unitest\n",
+    "# Vérifier dans quel notebook ou script se font les test\n",
+    "# écrire le code qui permet juste de vérifier que cela marche\n",
+    "# Faire les installations\n",
+    "# Créée le dossier\n",
+    "\n",
+    "#"
    ]
   }
  ],
