Suppression de mlruns.db de l'index

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -206,7 +206,8 @@
     "# davfgh\n",
     "# token à la place du password git\n",
     "\n",
-    "# Implémentation de pytest/unitest\n",
+    "# Test unitaire\n",
+    "# pytest tests/\n",
     "# Vérifier dans quel notebook ou script se font les test\n",
     "# écrire le code qui permet juste de vérifier que cela marche\n",
     "# Faire les installations\n",
