--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -89,6 +89,287 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "application_test chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "application_train chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "bureau chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "bureau_balance chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "credit_card_balance chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "Erreur avec l'encodage : utf-8\n",
+      "Tentative de lecture avec l'encodage : latin1\n",
+      "homecredit_columns_description chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "installments_payments chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "pos_cash_balance chargé avec succès !\n",
+      "\n",
+      "Tentative de lecture avec l'encodage : utf-8\n",
+      "previous_application chargé avec succès !\n",
+      "\n",
+      "Application_test Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 48744 entries, 0 to 48743\n",
+      "Columns: 121 entries, SK_ID_CURR to AMT_REQ_CREDIT_BUREAU_YEAR\n",
+      "dtypes: float64(65), int64(40), object(16)\n",
+      "memory usage: 45.0+ MB\n",
+      "None \n",
+      "\n",
+      "Application_train Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 307511 entries, 0 to 307510\n",
+      "Columns: 122 entries, SK_ID_CURR to AMT_REQ_CREDIT_BUREAU_YEAR\n",
+      "dtypes: float64(65), int64(41), object(16)\n",
+      "memory usage: 286.2+ MB\n",
+      "None \n",
+      "\n",
+      "Bureau Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1716428 entries, 0 to 1716427\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column                  Dtype  \n",
+      "---  ------                  -----  \n",
+      " 0   SK_ID_CURR              int64  \n",
+      " 1   SK_ID_BUREAU            int64  \n",
+      " 2   CREDIT_ACTIVE           object \n",
+      " 3   CREDIT_CURRENCY         object \n",
+      " 4   DAYS_CREDIT             int64  \n",
+      " 5   CREDIT_DAY_OVERDUE      int64  \n",
+      " 6   DAYS_CREDIT_ENDDATE     float64\n",
+      " 7   DAYS_ENDDATE_FACT       float64\n",
+      " 8   AMT_CREDIT_MAX_OVERDUE  float64\n",
+      " 9   CNT_CREDIT_PROLONG      int64  \n",
+      " 10  AMT_CREDIT_SUM          float64\n",
+      " 11  AMT_CREDIT_SUM_DEBT     float64\n",
+      " 12  AMT_CREDIT_SUM_LIMIT    float64\n",
+      " 13  AMT_CREDIT_SUM_OVERDUE  float64\n",
+      " 14  CREDIT_TYPE             object \n",
+      " 15  DAYS_CREDIT_UPDATE      int64  \n",
+      " 16  AMT_ANNUITY             float64\n",
+      "dtypes: float64(8), int64(6), object(3)\n",
+      "memory usage: 222.6+ MB\n",
+      "None \n",
+      "\n",
+      "Bureau_balance Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27299925 entries, 0 to 27299924\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column          Dtype \n",
+      "---  ------          ----- \n",
+      " 0   SK_ID_BUREAU    int64 \n",
+      " 1   MONTHS_BALANCE  int64 \n",
+      " 2   STATUS          object\n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 624.8+ MB\n",
+      "None \n",
+      "\n",
+      "Credit_card_balance Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3840312 entries, 0 to 3840311\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                      Dtype  \n",
+      "---  ------                      -----  \n",
+      " 0   SK_ID_PREV                  int64  \n",
+      " 1   SK_ID_CURR                  int64  \n",
+      " 2   MONTHS_BALANCE              int64  \n",
+      " 3   AMT_BALANCE                 float64\n",
+      " 4   AMT_CREDIT_LIMIT_ACTUAL     int64  \n",
+      " 5   AMT_DRAWINGS_ATM_CURRENT    float64\n",
+      " 6   AMT_DRAWINGS_CURRENT        float64\n",
+      " 7   AMT_DRAWINGS_OTHER_CURRENT  float64\n",
+      " 8   AMT_DRAWINGS_POS_CURRENT    float64\n",
+      " 9   AMT_INST_MIN_REGULARITY     float64\n",
+      " 10  AMT_PAYMENT_CURRENT         float64\n",
+      " 11  AMT_PAYMENT_TOTAL_CURRENT   float64\n",
+      " 12  AMT_RECEIVABLE_PRINCIPAL    float64\n",
+      " 13  AMT_RECIVABLE               float64\n",
+      " 14  AMT_TOTAL_RECEIVABLE        float64\n",
+      " 15  CNT_DRAWINGS_ATM_CURRENT    float64\n",
+      " 16  CNT_DRAWINGS_CURRENT        int64  \n",
+      " 17  CNT_DRAWINGS_OTHER_CURRENT  float64\n",
+      " 18  CNT_DRAWINGS_POS_CURRENT    float64\n",
+      " 19  CNT_INSTALMENT_MATURE_CUM   float64\n",
+      " 20  NAME_CONTRACT_STATUS        object \n",
+      " 21  SK_DPD                      int64  \n",
+      " 22  SK_DPD_DEF                  int64  \n",
+      "dtypes: float64(15), int64(7), object(1)\n",
+      "memory usage: 673.9+ MB\n",
+      "None \n",
+      "\n",
+      "Homecredit_columns_description Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 219 entries, 0 to 218\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   Unnamed: 0   219 non-null    int64 \n",
+      " 1   Table        219 non-null    object\n",
+      " 2   Row          219 non-null    object\n",
+      " 3   Description  219 non-null    object\n",
+      " 4   Special      86 non-null     object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 8.7+ KB\n",
+      "None \n",
+      "\n",
+      "Installments_payments Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13605401 entries, 0 to 13605400\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                  Dtype  \n",
+      "---  ------                  -----  \n",
+      " 0   SK_ID_PREV              int64  \n",
+      " 1   SK_ID_CURR              int64  \n",
+      " 2   NUM_INSTALMENT_VERSION  float64\n",
+      " 3   NUM_INSTALMENT_NUMBER   int64  \n",
+      " 4   DAYS_INSTALMENT         float64\n",
+      " 5   DAYS_ENTRY_PAYMENT      float64\n",
+      " 6   AMT_INSTALMENT          float64\n",
+      " 7   AMT_PAYMENT             float64\n",
+      "dtypes: float64(5), int64(3)\n",
+      "memory usage: 830.4 MB\n",
+      "None \n",
+      "\n",
+      "Pos_cash_balance Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10001358 entries, 0 to 10001357\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                 Dtype  \n",
+      "---  ------                 -----  \n",
+      " 0   SK_ID_PREV             int64  \n",
+      " 1   SK_ID_CURR             int64  \n",
+      " 2   MONTHS_BALANCE         int64  \n",
+      " 3   CNT_INSTALMENT         float64\n",
+      " 4   CNT_INSTALMENT_FUTURE  float64\n",
+      " 5   NAME_CONTRACT_STATUS   object \n",
+      " 6   SK_DPD                 int64  \n",
+      " 7   SK_DPD_DEF             int64  \n",
+      "dtypes: float64(2), int64(5), object(1)\n",
+      "memory usage: 610.4+ MB\n",
+      "None \n",
+      "\n",
+      "Previous_application Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1670214 entries, 0 to 1670213\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column                       Non-Null Count    Dtype  \n",
+      "---  ------                       --------------    -----  \n",
+      " 0   SK_ID_PREV                   1670214 non-null  int64  \n",
+      " 1   SK_ID_CURR                   1670214 non-null  int64  \n",
+      " 2   NAME_CONTRACT_TYPE           1670214 non-null  object \n",
+      " 3   AMT_ANNUITY                  1297979 non-null  float64\n",
+      " 4   AMT_APPLICATION              1670214 non-null  float64\n",
+      " 5   AMT_CREDIT                   1670213 non-null  float64\n",
+      " 6   AMT_DOWN_PAYMENT             774370 non-null   float64\n",
+      " 7   AMT_GOODS_PRICE              1284699 non-null  float64\n",
+      " 8   WEEKDAY_APPR_PROCESS_START   1670214 non-null  object \n",
+      " 9   HOUR_APPR_PROCESS_START      1670214 non-null  int64  \n",
+      " 10  FLAG_LAST_APPL_PER_CONTRACT  1670214 non-null  object \n",
+      " 11  NFLAG_LAST_APPL_IN_DAY       1670214 non-null  int64  \n",
+      " 12  RATE_DOWN_PAYMENT            774370 non-null   float64\n",
+      " 13  RATE_INTEREST_PRIMARY        5951 non-null     float64\n",
+      " 14  RATE_INTEREST_PRIVILEGED     5951 non-null     float64\n",
+      " 15  NAME_CASH_LOAN_PURPOSE       1670214 non-null  object \n",
+      " 16  NAME_CONTRACT_STATUS         1670214 non-null  object \n",
+      " 17  DAYS_DECISION                1670214 non-null  int64  \n",
+      " 18  NAME_PAYMENT_TYPE            1670214 non-null  object \n",
+      " 19  CODE_REJECT_REASON           1670214 non-null  object \n",
+      " 20  NAME_TYPE_SUITE              849809 non-null   object \n",
+      " 21  NAME_CLIENT_TYPE             1670214 non-null  object \n",
+      " 22  NAME_GOODS_CATEGORY          1670214 non-null  object \n",
+      " 23  NAME_PORTFOLIO               1670214 non-null  object \n",
+      " 24  NAME_PRODUCT_TYPE            1670214 non-null  object \n",
+      " 25  CHANNEL_TYPE                 1670214 non-null  object \n",
+      " 26  SELLERPLACE_AREA             1670214 non-null  int64  \n",
+      " 27  NAME_SELLER_INDUSTRY         1670214 non-null  object \n",
+      " 28  CNT_PAYMENT                  1297984 non-null  float64\n",
+      " 29  NAME_YIELD_GROUP             1670214 non-null  object \n",
+      " 30  PRODUCT_COMBINATION          1669868 non-null  object \n",
+      " 31  DAYS_FIRST_DRAWING           997149 non-null   float64\n",
+      " 32  DAYS_FIRST_DUE               997149 non-null   float64\n",
+      " 33  DAYS_LAST_DUE_1ST_VERSION    997149 non-null   float64\n",
+      " 34  DAYS_LAST_DUE                997149 non-null   float64\n",
+      " 35  DAYS_TERMINATION             997149 non-null   float64\n",
+      " 36  NFLAG_INSURED_ON_APPROVAL    997149 non-null   float64\n",
+      "dtypes: float64(15), int64(6), object(16)\n",
+      "memory usage: 471.5+ MB\n",
+      "None \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_csv_with_fallback(filepath, encodings=['utf-8', 'latin1', 'ISO-8859-1', 'cp1252']):\n",
+    "    \"\"\"\n",
+    "    Lecture d'un fichier CSV avec tentative sur plusieurs encodages.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - filepath (str): Chemin du fichier à lire.\n",
+    "    - encodings (list): Liste des encodages à tester.\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: Le DataFrame pandas chargé.\n",
+    "\n",
+    "    Raises:\n",
+    "    - UnicodeDecodeError: Si aucun des encodages ne fonctionne.\n",
+    "    \"\"\"\n",
+    "    for encoding in encodings:\n",
+    "        try:\n",
+    "            print(f\"Tentative de lecture avec l'encodage : {encoding}\")\n",
+    "            return pd.read_csv(filepath, encoding=encoding)\n",
+    "        except UnicodeDecodeError:\n",
+    "            print(f\"Erreur avec l'encodage : {encoding}\")\n",
+    "\n",
+    "    raise UnicodeDecodeError(f\"Impossible de lire le fichier {filepath} avec les encodages {encodings}\")\n",
+    "\n",
+    "# Chemin vers le nouveau dossier \"data\"\n",
+    "data_path = \"D://Pro//OpenClassrooms//Projet_7//data//\"\n",
+    "\n",
+    "# Liste des fichiers et noms de DataFrame correspondants\n",
+    "files = {\n",
+    "    \"application_test\": \"application_test.csv\",\n",
+    "    \"application_train\": \"application_train.csv\",\n",
+    "    \"bureau\": \"bureau.csv\",\n",
+    "    \"bureau_balance\": \"bureau_balance.csv\",\n",
+    "    \"credit_card_balance\": \"credit_card_balance.csv\",\n",
+    "    \"homecredit_columns_description\": \"HomeCredit_columns_description.csv\",\n",
+    "    \"installments_payments\": \"installments_payments.csv\",\n",
+    "    \"pos_cash_balance\": \"POS_CASH_balance.csv\",\n",
+    "    \"previous_application\": \"previous_application.csv\"\n",
+    "}\n",
+    "\n",
+    "# Chargement des fichiers dans des DataFrames\n",
+    "loaded_data = {}\n",
+    "for name, file in files.items():\n",
+    "    filepath = data_path + file\n",
+    "    loaded_data[name] = read_csv_with_fallback(filepath)\n",
+    "    print(f\"{name} chargé avec succès !\\n\")\n",
+    "\n",
+    "# Affichage des informations pour chaque DataFrame\n",
+    "for name, df in loaded_data.items():\n",
+    "    print(f\"{name.capitalize()} Info:\")\n",
+    "    print(df.info(), \"\\n\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
