--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -483,6 +483,7 @@
     "# cd /D D:\\Pro\\OpenClassrooms\\Projet_7\\3_dossier_code_012025\n",
     "# Remote\n",
     "# git remote -v\n",
+    "# git remote add origin https://github.com/davfgh/Projet7_OpenClassrooms.git\n",
     "# git push -u origin main\n",
     "# davfgh\n",
     "# token à la place du password git\n",
