Mise à jour du notebook pour que le fichier requirements.txt soit créee à la racine après l'execution de MLflow

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -19,6 +19,7 @@
     "import os\n",
     "import time\n",
     "import random\n",
+    "import subprocess\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 362, number of negative: 388\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000540 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000923 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 2502\n",
@@ -431,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/10 16:37:22 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/01/11 09:13:28 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     }
    ],
@@ -453,6 +454,40 @@
     "\n",
     "    # 4. Enregistrement du modèle\n",
     "    mlflow.sklearn.log_model(model, \"model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fichier requirements.txt généré à D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chemin vers le fichier requirements.txt\n",
+    "requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
+    "\n",
+    "# Chemin absolu de pip\n",
+    "pip_path = \"D://Pro//Env//Scripts//pip.exe\"\n",
+    "\n",
+    "# Créer le répertoire s'il n'existe pas\n",
+    "os.makedirs(os.path.dirname(requirements_file), exist_ok=True)\n",
+    "\n",
+    "# Générer le fichier requirements.txt\n",
+    "try:\n",
+    "    with open(requirements_file, \"w\") as f:\n",
+    "        result = subprocess.run([pip_path, \"freeze\"], stdout=f, text=True, check=True)\n",
+    "    print(f\"Fichier requirements.txt généré à {requirements_file}\")\n",
+    "except subprocess.CalledProcessError as e:\n",
+    "    print(f\"Erreur lors de l'exécution de pip freeze : {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Une erreur inattendue s'est produite : {e}\")"
    ]
   },
   {
