Adaptation du notebook au .venv

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,22 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Version de Python : 3.12.2 | packaged by Anaconda, Inc. | (main, Feb 27 2024, 17:28:07) [MSC v.1916 64 bit (AMD64)]\n",
-      "Version de Jupyter Notebook : 7.0.8\n",
-      "Version de NumPy : 1.26.4\n",
+      "Version de Python : 3.12.8 (tags/v3.12.8:2dc476b, Dec  3 2024, 19:30:04) [MSC v.1942 64 bit (AMD64)]\n",
+      "Version de Jupyter Notebook : 7.3.2\n",
+      "Version de NumPy : 2.2.2\n",
       "Version de Pandas : 2.2.3\n",
-      "Version de Matplotlib : 3.9.2\n",
+      "Version de Matplotlib : 3.10.0\n",
       "Version de Seaborn : 0.13.2\n",
       "Version de MLflow : 2.19.0\n",
-      "Version de Scikit-Learn : 1.5.1\n",
-      "Version de LightGMB : 4.3.0\n"
+      "Version de Scikit-Learn : 1.6.1\n",
+      "Version de LightGMB : 4.5.0\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,15 +390,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "d:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 362, number of negative: 388\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000923 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000888 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 2502\n",
@@ -432,7 +442,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/11 09:13:28 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/01/21 16:54:24 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     }
    ],
@@ -458,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +508,11 @@
     }
    },
    "source": [
-    "Activer l'environement :\n",
+    "Activer l'environement (.venv):\n",
+    "Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n",
+    "D:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Scripts\\Activate.ps1\n",
+    "\n",
+    "Activer l'environement (Anaconda):\n",
     "conda activate D:/Pro/Env\n",
     "\n",
     "Lancer l'UI MLflow :\n",
@@ -510,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,15 +542,31 @@
     "# Vérifier dans quel notebook ou script se font les test\n",
     "# écrire le code qui permet juste de vérifier que cela marche\n",
     "# Faire les installations\n",
-    "# Créée le dossier\n",
+    "# Créée le dossier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utilisation de du .venv\n",
     "\n",
-    "#"
+    "# Chemin ou est intalllé le venv\n",
+    "# D:\\Pro\\OpenClassrooms\\Projet_7>\n",
+    "\n",
+    "# Activer l'execution de script temporairement\n",
+    "# Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n",
+    "\n",
+    "# Activer le .venv\n",
+    "# D:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Scripts\\Activate.ps1"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -550,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
