Ajout du fichier ci-venv.yml et nettoyage des requirements

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import notebook\n",
     "import re\n",
+    "import subprocess\n",
     "import os\n",
     "import time\n",
     "import random\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -408,9 +409,8 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 362, number of negative: 388\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000888 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000185 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2502\n",
       "[LightGBM] [Info] Number of data points in the train set: 750, number of used features: 10\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.482667 -> initscore=-0.069361\n",
@@ -442,7 +442,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/21 16:54:24 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/01/21 17:49:01 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     }
    ],
@@ -468,36 +468,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Chemin vers le fichier requirements.txt\n",
+    "# requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
+    "\n",
+    "# # Chemin absolu de pip\n",
+    "# pip_path = \"D://Pro//Env//Scripts//pip.exe\"\n",
+    "\n",
+    "# # Créer le répertoire s'il n'existe pas\n",
+    "# os.makedirs(os.path.dirname(requirements_file), exist_ok=True)\n",
+    "\n",
+    "# # Générer le fichier requirements.txt\n",
+    "# try:\n",
+    "#     with open(requirements_file, \"w\") as f:\n",
+    "#         result = subprocess.run([pip_path, \"freeze\"], stdout=f, text=True, check=True)\n",
+    "#     print(f\"Fichier requirements.txt généré à {requirements_file}\")\n",
+    "# except subprocess.CalledProcessError as e:\n",
+    "#     print(f\"Erreur lors de l'exécution de pip freeze : {e}\")\n",
+    "# except Exception as e:\n",
+    "#     print(f\"Une erreur inattendue s'est produite : {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fichier requirements.txt généré à D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\n"
+      "Fichier raw_requirements.txt généré à D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/raw_requirements.txt\n",
+      "Fichier requirements.txt nettoyé généré à D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\n"
      ]
     }
    ],
    "source": [
-    "# Chemin vers le fichier requirements.txt\n",
-    "requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
+    "# Chemin vers les fichiers requirements\n",
+    "raw_requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/raw_requirements.txt\"\n",
+    "cleaned_requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
     "\n",
     "# Chemin absolu de pip\n",
-    "pip_path = \"D://Pro//Env//Scripts//pip.exe\"\n",
+    "pip_path = \"D://Pro//OpenClassrooms//Projet_7//.venv//Scripts//pip.exe\"\n",
     "\n",
     "# Créer le répertoire s'il n'existe pas\n",
-    "os.makedirs(os.path.dirname(requirements_file), exist_ok=True)\n",
+    "os.makedirs(os.path.dirname(raw_requirements_file), exist_ok=True)\n",
     "\n",
-    "# Générer le fichier requirements.txt\n",
+    "# Générer le fichier raw_requirements.txt\n",
     "try:\n",
-    "    with open(requirements_file, \"w\") as f:\n",
+    "    with open(raw_requirements_file, \"w\") as f:\n",
     "        result = subprocess.run([pip_path, \"freeze\"], stdout=f, text=True, check=True)\n",
-    "    print(f\"Fichier requirements.txt généré à {requirements_file}\")\n",
+    "    print(f\"Fichier raw_requirements.txt généré à {raw_requirements_file}\")\n",
     "except subprocess.CalledProcessError as e:\n",
     "    print(f\"Erreur lors de l'exécution de pip freeze : {e}\")\n",
+    "    exit(1)\n",
     "except Exception as e:\n",
-    "    print(f\"Une erreur inattendue s'est produite : {e}\")"
+    "    print(f\"Une erreur inattendue s'est produite : {e}\")\n",
+    "    exit(1)\n",
+    "\n",
+    "# Nettoyer le fichier raw_requirements.txt pour générer requirements.txt\n",
+    "try:\n",
+    "    with open(raw_requirements_file, \"r\") as raw_f, open(cleaned_requirements_file, \"w\") as cleaned_f:\n",
+    "        for line in raw_f:\n",
+    "            # Si une ligne contient un @ file://, supprimer tout après le @\n",
+    "            if \"@ file://\" in line:\n",
+    "                line = re.sub(r\"@ file://.*\", \"\", line)\n",
+    "            cleaned_f.write(line)\n",
+    "    print(f\"Fichier requirements.txt nettoyé généré à {cleaned_requirements_file}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Une erreur inattendue s'est produite lors du nettoyage : {e}\")\n",
+    "    exit(1)"
    ]
   },
   {
@@ -524,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
